@@ -1,4 +1,6 @@
-2098.	[placeholder]	rt16411
+2098.	[bug]           Race in rbtdb.c:no_references(), which occasionally
+			triggered an INSIST failure about the node lock
+			reference.  [RT #16411]
 
 2097.	[bug]		named could reference a destroyed memory context
 			after being reloaded / reconfigured. [RT #16428]
